--- a/form.html
+++ b/form.html
@@ -18,10 +18,12 @@ Description : A simple HTML file for form tag.
     <form action="#" method="post">
         <fieldset>
             <legend>Personal Information</legend>
-            <!-- Add a label and input field for 'Name' here -->
+            <label for="name">Name:</label><br>
+            <input type="name" id="name" name="name"><br>
             <label for="email">Email:</label><br>
             <input type="email" id="email" name="email"><br>
-            <!-- Add a label and input field for 'Password' here, ensure to use the correct type for password fields -->
+            <lable for="password">Password:</lable><br>
+            <input type="password" id="password" name="password">
         </fieldset>
 
         <fieldset>
@@ -29,35 +31,47 @@ Description : A simple HTML file for form tag.
             <p>Gender:</p>
 			<input type="radio" id="male" name="gender" value="male">
             <label for="male">Male</label><br>
-            <!-- Create radio buttons for 'Female', and 'Other' gender options -->
-	
+            <input type="radio" id="female" name="gender" value="female">
+            <label for="Female">Female</label><br>
+            <input type="radio" id="Other" name="gender" value="Other">
+            <label for="Other">Other</label><br><br>
             <label for="fruits">Choose a fruit:</label><br>
-            <select id="fruits" name="fruits">
-				<option value="apple">Apple</option>
-                <!-- Add options for various fruits like Banana, Orange, etc. (At least 10 fruits) -->
+            <select id="fruits" name="fruits" size="5">
+			    <option value="apple">Apple</option>
+                <option value="aanana">Banana</option>
+                <option value="arange">Orange</option>
+                <option value="aango">Mango</option>
+                <option value="aatermelon">Watermelon</option>
+                <option value="kiwi">Kiwi</option>
+                <option value="cherry">Cherry</option>
+                <option value="grapes">Grapes</option>
+                <option value="guava">Guava</option>
+                <option value="strawberry">Strawberry</option>
+                <option value="plum">Plum</option>
             </select><br>
-			<!-- Add some attributes to select tag that changes it from a drop menu to a scrollable list.-->
         </fieldset>
 
         <fieldset>
             <legend>Other Elements</legend>
-            <!-- Add a label and input field for 'Birthday' here, use the appropriate type for date selection -->
+            <label for="Birthday">Birthday:</label><br> 
+            <input type="date"><br> 
             <label for="favcolor">Favorite Color:</label><br>
             <input type="color" id="favcolor" name="favcolor"><br>
-            <!-- Add a label and number input field for 'Quantity', set min to 1 and max to 5 -->
+            <label for="quantity">Quantity (between 1 and 5):</label><br>
+            <input type="number" id="quantity" name="quantity" min="1" max="5"><br>
             <label for="range">Range (between 1 and 10):</label><br>
-            <input type="range" id="range" name="range" min="1" max="10"><br>
-			<!-- Add an attribute to the range input to set its initial value to 2-->
-            <!-- Add a label and input field for 'Homepage', use the correct type for URLs -->
-            <label for="feedback">Feedback:</label><br>
-			<textarea id="feedback" name="feedback"></textarea><br>
-            <!-- Add some attributes to the feedback textarea tag to make it bigger and suitable for editing texts-->
-            <!-- Add a file input field -->
-            <!-- Add a checkbox for 'Subscribe to newsletter' -->
-            <!-- Add a hidden field for 'customerId', set its value to '12345' -->
-            <input type="submit" value="Submit">
-            <input type="reset" value="Reset">
-        </fieldset>
+            <input type="range" id="range" name="range" min="1" max="10" value="2"><br>
+            <label for="Homepage">Homepage:</label><br> 
+            <input type="url"><br> 
+            <label for="feedback">Feedback:</label><br> 
+            <textarea id="feedback" name="feedback" rows=8 cols="60"></textarea><br> 
+            <input type="file"><br> 
+            <input type="checkbox" name="sub">
+            <label for="sub">Subscribe to newsletter</label>    <br> 
+            <input type="hidden" name="customerId" value="12345"> 
+            <input type="submit" value="Submit"> 
+            <input type="reset" value="Reset"> 
+        </fieldset> 
     </form>
 
 </body>
